Revision history for Perl extension Runops::Recorder.

0.10  ...
    - Fixed actual compat with 5.10 and 5.12 claimed.
    - Added at least 5.8.9 compat as requested by Hugo van der Sanden (hopefully
      this means 5.8.8 too)
    
0.09  Sun Nov 13
    - Fixed a warning in the viewer if we haven't seen a TZ yet
    - Added dump() function to dump the buffer to disk
    - Added missing dependencies to Makefile.PL
    
0.08  Sat Nov 12
    - Added an exception viewer which dumps where die was called
    - Timestamp events are now splitted in two - one with seconds and one with
      miliseconds
    - A keyframe is now followed with an switch_file event if we have a file
    - Added -nostore option which prevents continous store to disk. This should 
      be used in combination with -die to only dump snapshots on exceptions
    - Buffer size is configureable via -bs option
    
0.07  Wed Aug 17
    - Keyframes now also record a timestamp so we can search thru our recording
      easier
    - Only the initial keyframe was ever written as I forgot to increment the keyframe
      counter
      
0.06  Wed Aug 17
    - Silence warning 'Use of uninitialized value $opts[0]' when loading without arguments
    - RR_AUTORUN and RR_SKIP_INC are now available as -a <delay> and -s arguments to rr-viewer
    - When done viewing the recording show the last place we were at
    
0.05  Wed Jun 29
    - Improved documentation on how to use this
    - 'die' is now recorded
    - Events are now written to a buffer before being written down to disk
      to reduce the I/O
    - Subroutine names are now fully qualified
    
0.04  Mon Jun 27
    - The format of recordings has changed and is now a directory with a bunch
      of files instead.
    - Added a Runops::Recorder::Reader class that can read recordings and
      callback on different events
    - Now also records when you enter a sub and the name of it
    - A new rr-diff tool that shows two recordings side by side
    